# innovativeproject-loancalculator

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/actions/install-deps/: action.yml
.github/actions/install-scrapper-deps/: action.yml
.github/workflows/: actions.yml
backend/: app.py  pyproject.toml
backend/backend/: app.py  testrequests.py
backend/server/: calculator.py  db.py
backend/tests/: test_app.py  test_calculator.py
backend/tests/output/: test_calculator_output.json  test_calculator_output_descending.json  test_calculator_output_fixed.json
docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.scrapper  docker-compose.yaml
frontend/: .eslintrc.js  package-lock.json  package.json
frontend/src/: App.css  App.js  App.test.js  fetchData.js  global.js  globalStyles.js
frontend/src/components/DescendingInstallmentsTable/: DescendingInstallmentsTableElements.js  index.js
frontend/src/components/accentParagraph/: AccentParagraph.js
frontend/src/components/comparisonChartContainer/: BarChart.js  ComparisonChartContainer.js  index.js
frontend/src/components/descendingChartContainer/: DescendingChartContainerElements.js  LineChart.js  index.js
frontend/src/components/footerPurple/: FooterPurpleElements.js  index.js
frontend/src/components/footerWhite/: FooterWhiteElements.js  index.js
frontend/src/pages/: calculatedResults.js  calculator.js  howToCalculateInstallments.js  index.js  usefulTerms.js
frontend/src/pages/index/: index.js  (+1 more)
scrapper/: app.py  pyproject.toml
scrapper/server/: db.py  scrapper.py
(+43 files in other folders)
