[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for loancalculator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
beautifulsoup4 = "^4.10.0"
black = "^22.1.0"
pytest = "^7.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"