[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend for innovativeproject-loancalculator"
authors = ["Szymon Ciszewski <szymox815@gmail.com>", "Natalia Rusin <>", "Mikołaj Rarok <>"]

[tool.poetry.dependencies]
python = "3.9.10"
Flask = "^2.0.3"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
