[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = "Scrapper for innovativeproject-loancalculator"
authors = ["Szymon Ciszewski", "Natalia Rusin", "Mikołaj Rarok"]

[tool.poetry.dependencies]
python = "3.9.10"
beautifulsoup4 = "^4.10.0"
Flask = "^2.0.3"
Flask-PyMongo = "^2.3.0"
schedule = "^1.1.0"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
pymongo = "^4.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"